--- a/deploy/webhook.yaml
+++ b/deploy/webhook.yaml
@@ -77,6 +77,9 @@ rules:
 - apiGroups: ["admissionregistration.k8s.io"]
   resources: ["mutatingwebhookconfigurations"]
   verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
+- apiGroups: ["v1",""]
+  resources: ["secrets"]
+  verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
