--- a/deploy/webhook.yaml
+++ b/deploy/webhook.yaml
@@ -87,7 +87,7 @@ rules:
   verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
 - apiGroups: ["v1",""]
   resources: ["secrets"]
-  verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
+  verbs: ["get", "list"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
