--- a/deploy/webhook.yaml
+++ b/deploy/webhook.yaml
@@ -1,57 +1,66 @@
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: zerok-injector
+
+---
+apiVersion: v1
 kind: Service
 metadata:
-  name: zk-injector
+  namespace: zerok-injector
+  name: zerok-injector
   labels:
-    app: zk-injector
+    app: zerok-injector
 spec:
   publishNotReadyAddresses: true
   ports:
     - port: 443
       targetPort: 8443
   selector:
-    app: zk-injector
+    app: zerok-injector
 
 ---
+
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: zk-injector
+  name: zerok-injector
+  namespace: zerok-injector
   labels:
-    app: zk-injector
+    app: zerok-injector
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: zk-injector
-  namespace: zk-injector
+  name: zerok-injector
+  namespace: zerok-injector
   labels:
-    app: zk-injector
+    app: zerok-injector
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: zk-injector
+      app: zerok-injector
   template:
     metadata:
-      name: zk-injector
+      name: zerok-injector
       labels:
-        app: zk-injector
+        app: zerok-injector
     spec:
-      serviceAccountName: zk-injector
+      serviceAccountName: zerok-injector
       containers:
-        - name: zk-injector
-          image: rajeevzerok/zk-injector:0.6
+        - name: zerok-injector
+          image: us-west1-docker.pkg.dev/zerok-dev/stage/zerok-injector:tmp
           imagePullPolicy: Always
           resources:
             limits:
               cpu: 500m
-              memory: 256Mi
+              memory: 128Mi
             requests:
               cpu: 250m
-              memory: 128Mi
+              memory: 64Mi
           env:
           - name: DOCKER_HOST
             value: tcp://localhost:2375
@@ -78,30 +87,29 @@ spec:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: zk-injector
+  name: zerok-injector
   labels:
-    app: zk-injector
+    app: zerok-injector
 rules:
 - apiGroups: ["admissionregistration.k8s.io"]
   resources: ["mutatingwebhookconfigurations"]
   verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
 - apiGroups: ["v1",""]
   resources: ["secrets"]
-  verbs: ["get", "list"]
+  verbs: ["create", "get", "delete", "list", "patch", "update", "watch"]
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: zk-injector
+  name: zerok-injector
   labels:
-    app: zk-injector
+    app: zerok-injector
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: zk-injector
+  name: zerok-injector
 subjects:
 - kind: ServiceAccount
-  name: zk-injector
-  namespace: zk-injector
-
+  name: zerok-injector
+  namespace: zerok-injector
