Moved webhook config to config. Broken down main.go and create specific files with clear responsibilities.

--- a/internal/config/config-local.yaml
+++ b/internal/config/config-local.yaml
@@ -1,5 +1,5 @@
 redis:
-  host: redis.redis.svc.cluster.local
+  host: localhost
   port: 6379
   readTimeout: 20
 webhook:
@@ -7,4 +7,4 @@ webhook:
   service: zerok-injector
   name: zerok-webhook
   path: /zk-injector
-debug: false
+debug: true
