--- a/internal/config/config-local.yaml
+++ b/internal/config/config-local.yaml
@@ -2,9 +2,18 @@ redis:
   host: localhost
   port: 6379
   readTimeout: 20
+
 webhook:
   namespace: zerok-injector
   service: zerok-injector
   name: zerok-webhook
   path: /zk-injector
+
+server:
+  port: 80
+
+logs:
+  color: true
+  level: DEBUG
+
 debug: true
