--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -2,9 +2,16 @@ redis:
   host: redis.redis.svc.cluster.local
   port: 6379
   readTimeout: 20
+
 webhook:
   namespace: zerok-injector
   service: zerok-injector
   name: zerok-webhook
   path: /zk-injector
+  port: 8443
+
+logs:
+  color: true
+  level: DEBUG
+
 debug: false
