Added polling interval in config files

--- a/internal/config/config.yaml
+++ b/internal/config/config.yaml
@@ -2,6 +2,7 @@ redis:
   host: redis.redis.svc.cluster.local
   port: 6379
   readTimeout: 20
+  pollingInterval: 30 #seconds
 
 webhook:
   namespace: zerok-injector
