Exposed an Api to restart deployments in a cluster

--- a/internal/config/config-local.yaml
+++ b/internal/config/config-local.yaml
@@ -12,6 +12,10 @@ webhook:
   path: /zk-injector
   port: 8443
 
+zkcloud:
+  restartPath: /restart
+  port: 8442
+
 logs:
   color: true
   level: DEBUG
